.. -*- restructuredtext -*-

This file describes user-visible changes between pockets versions.


Version 0.2.2 (2015-02-19)
--------------------------

 * Enables bdist_wheel distributions


Version 0.2.1 (2015-02-19)
--------------------------

 * Minimum required six version changed to 1.7


Version 0.2 (2015-02-19)
------------------------

 * Adds collections module
 * Adds inspect module
 * Adds string module


Version 0.1 (2015-02-10)
------------------------

* Initial version.